Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gst-plugins-base gst-plugins-base
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 645
    • Issues 645
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 88
    • Merge requests 88
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-plugins-basegst-plugins-base
  • Issues
  • #579

Closed
Open
Created Mar 27, 2019 by Thibault Saunier@thiblahute🌵Maintainer

ogg: Fails to negotiate downstream over HTTP with 'no header sent yet' message

Test name: validate.http.transcode.to_rawaudio_and_prores_in_quicktime.vorbis_theora_1_ogg

Command:

DISPLAY=':27' GST_VALIDATE_SCENARIOS_PATH='/builds/thiblahute/gst-ci/gst-build/prefix/share/gstreamer-1.0/validate/scenarios:/builds/thiblahute/gst-ci/gst-build/subprojects/gst-devtools/validate/data/scenarios' GST_GL_XINITTHREADS='1' /builds/thiblahute/gst-ci/gst-build/build/subprojects/gst-devtools/validate/tools/gst-validate-transcoding-1.0 -o 'video/quicktime;:video/x-prores:audio/x-raw' http://127.0.0.1:8079/defaults/ogg/vorbis_theora.1.ogg file:///builds/thiblahute/gst-ci/gst-build/build/subprojects/gst-integration-testsuites/rendered/validate/http/to_rawaudio_and_prores_in_quicktime/vorbis_theora_1_ogg

/builds/thiblahute/gst-ci/gst-build/build/subprojects/gst-devtools/validate/tools/gst-validate-transcoding-1.0 logs:

Starting pipeline
Prerolling...
Start buffering
Buffering... 1%  
Buffering... 3%  
Buffering... 6%  
Buffering... 12%  
Buffering... 25%  
Buffering... 43%  
Done buffering
0:00:00.233291712 112092 0x7f8f70051de0 ERROR              theoradec gsttheoradec.c:538:theora_handle_type_packet:<theoradec0> Failed to negotiate
0:00:00.436727714 112092 0x7f8f70051de0 ERROR               validate gst-validate-reporter.c:195:gst_validate_report_valist: <encoding-pipeline> 2462 (critical) : runtime: We got an ERROR message on the bus : Got error: Could not decode stream. -- Debug message: ../subprojects/gst-plugins-base/ext/theora/gsttheoradec.c(812): theora_handle_data_packet (): /GstPipeline:encoding-pipeline/GstURIDecodeBin:uridecodebin0/GstDecodeBin:decodebin0/GstTheoraDec:theoradec0:
no header sent yet ((NULL))
   warning : received the same caps twice
             Detected on <oggdemux0:sink>
             Detected on <theoradec0:sink>
             Detected on <vorbisdec0:sink>

  critical : We got an ERROR message on the bus
             Detected on <encoding-pipeline>
             Details : Got error: Could not decode stream. -- Debug message: ../subprojects/gst-plugins-base/ext/theora/gsttheoradec.c(812): theora_handle_data_packet (): /GstPipeline:encoding-pipeline/GstURIDecodeBin:uridecodebin0/GstDecodeBin:decodebin0/GstTheoraDec:theoradec0:
                     no header sent yet ((nil)A)
             dotfile : https://gitlab.freedesktop.org/thiblahute/gst-ci/-/jobs/198367/artifacts/raw/validate-logs/validate/http/transcode/to_rawaudio_and_prores_in_quicktime/vorbis_theora_1_ogg.pipelines_dot_files/0:00:00.401102239-validate-report-critical-on-encoding-pipeline-runtime::error-on-bus.dot
             backtrace :
               gst_debug_get_stack_trace (gstinfo.c:2886)
               gst_validate_report_new (gst-validate-report.c:742)
               gst_validate_report_valist (gst-validate-reporter.c:186)
               gst_validate_report (gst-validate-reporter.c:319)
               _bus_handler (gst-validate-pipeline-monitor.c:561)
               ffi_call_unix64 (unix64.S:73)
               ffi_call (ffi64.c:525)
               g_cclosure_marshal_generic (gclosure.c:1496)
               g_closure_invoke (gclosure.c:810)
               signal_emit_unlocked_R (gsignal.c:3635)
               g_signal_emit_valist (gsignal.c:3391)
               g_signal_emit (gsignal.c:3447)
               gst_bus_sync_signal_handler (gstbus.c:1288)
               gst_bus_post (gstbus.c:340)
               gst_element_post_message_default (gstelement.c:1986)
               gst_bin_post_message (gstbin.c:2801)
               gst_element_post_message (gstelement.c:2029)
               gst_bin_handle_message_func (gstbin.c:4054)
               gst_pipeline_handle_message (gstpipeline.c:612)
               bin_bus_handler (gstbin.c:3272)
               gst_bus_post (gstbus.c:334)
               gst_element_post_message_default (gstelement.c:1986)
               gst_bin_post_message (gstbin.c:2801)
               gst_element_post_message (gstelement.c:2029)
               gst_bin_handle_message_func (gstbin.c:4054)
               handle_message (gsturidecodebin.c:2515)
               bin_bus_handler (gstbin.c:3272)
               gst_bus_post (gstbus.c:334)
               gst_element_post_message_default (gstelement.c:1986)
               gst_bin_post_message (gstbin.c:2801)
               gst_element_post_message (gstelement.c:2029)
               gst_bin_handle_message_func (gstbin.c:4054)
               gst_decode_bin_handle_message (gstdecodebin2.c:5628)
               bin_bus_handler (gstbin.c:3272)
               gst_bus_post (gstbus.c:334)
               gst_element_post_message_default (gstelement.c:1986)
               gst_element_post_message (gstelement.c:2029)
               gst_element_message_full_with_details (gstelement.c:2165)
               gst_element_message_full (gstelement.c:2204)
               theora_dec_decode_buffer (gsttheoradec.c:833)
               theora_dec_handle_frame (gsttheoradec.c:897)
               gst_video_decoder_decode_frame (gstvideodecoder.c:3402)
               gst_video_decoder_have_frame (gstvideodecoder.c:3334)
               gst_video_decoder_parse_available (gstvideodecoder.c:893)
               gst_video_decoder_chain_forward (gstvideodecoder.c:2139)
               gst_video_decoder_chain (gstvideodecoder.c:2438)
               gst_validate_pad_monitor_chain_func (gst-validate-pad-monitor.c:2282)
               gst_pad_push_data (gstpad.c:4326)
               gst_pad_push (gstpad.c:4701)
               gst_multi_queue_loop (gstmultiqueue.c:1639)
               gst_task_func (gsttask.c:328)
               g_thread_pool_thread_proxy (gthreadpool.c:307)
               g_thread_proxy (gthread.c:784)
               start_thread (pthread_create.c:486)
               __clone (clone.S:93)
               



**Got criticals. Return value set to 18**:
  * critical error Got error: Could not decode stream. -- Debug message: ../subprojects/gst-plugins-base/ext/theora/gsttheoradec.c(812): theora_handle_data_packet (): /GstPipeline:encoding-pipeline/GstURIDecodeBin:uridecodebin0/GstDecodeBin:decodebin0/GstTheoraDec:theoradec0:
no header sent yet ((nil)A)

Issues found: 2

Start buffering
Buffering... 0%  
=======> Test FAILED (Return value: 18)
Assignee
Assign to
Time tracking