curl: Fix pushing incorrect buffers after seek

We must stop any existing transfer when seeking or we may push buffers
from the old request that downstream isn't expecting, causing decode errors.

Fixes: https://gitlab.freedesktop.org/gstreamer/gst-plugins-base/-/issues/579
Part-of: <https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/5537>